--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "sass": "^1.69.5",
     "svelte": "^4.2.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.4",
+    "vite-plugin-sass": "^0.1.0"
   }
 }
