--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,18 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vite": "^5.0.4"
   },
   "dependencies": {
     "@material/dom": "^14.0.0",
     "@smui/top-app-bar": "^7.0.0-beta.15",
     "sass": "^1.69.5",
-    "smui-theme": "^7.0.0-beta.15",
+    "svelte-map-leaflet": "^0.5.0",
     "vite-plugin-sass": "^0.1.0"
   }
 }
