--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@smui/icon-button": "^7.0.0-beta.15",
     "sass": "^1.69.5",
     "smui-theme": "^7.0.0-beta.15",
+    "svelte-map-leaflet": "^0.5.0",
     "vite-plugin-sass": "^0.1.0"
   }
 }
