backend ai service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,13 @@ services:
     networks:
       - haseus
 
+  ai:
+    image: ollama/ollama
+    restart: always
+    ports:
+      - 11434:11434
+    networks:
+      - haseus
+
 networks:
   haseus:
